fixed links behind header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,14 @@ body {
   background-color: darkslategray;
 }
 
+h2::before {
+  display: block;
+  content: " ";
+  margin-top: -80px;
+  height: 80px;
+  visibility: hidden;
+}
+
 header {
   padding: 20px 35px;
   background-color: darkslateblue;
